# devdatasync

./: .replit  README.md  docker-compose.yml  project_report.md  pyproject.toml
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
ansible/: inventory.yml  playbook.yml
attached_assets/: PBL-3 Rubrics.docx  Review2-Rubrics.docx
docs/: architecture_diagram.md
kubernetes/: backend-deployment.yml  backend-service.yml  frontend-deployment.yml  frontend-service.yml  logging-deployment.yml  monitoring-deployment.yml
mess-backend/: app.py  requirements.txt  test_app.py
mess-frontend/: Dockerfile  app.py
terraform/: main.tf  outputs.tf  variables.tf
