[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==3.2.2",
    "certifi>=2025.4.26",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pydantic>=2.11.4",
    "pymongo>=4.12.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
]
